# libdash

./: README.md
libdash/libdash/: CMakeLists.txt
libdash/libdash/include/: IAdaptationSet.h  IBaseUrl.h  IChunk.h  IConnection.h  IContentComponent.h  IDASHManager.h  IDescriptor.h  IDownloadObserver.h  IDownloadableChunk.h  IMPD.h  IMPDElement.h  IMetrics.h  IMultipleSegmentBase.h  INode.h  IPeriod.h  IProgramInformation.h  IRange.h  IRepresentationBase.h  ISegment.h  ISegmentBase.h  ISegmentList.h  ISegmentTemplate.h  ISegmentTimeline.h  ISegmentURL.h  ISubRepresentation.h  ISubset.h  IURLType.h  config.h  libdash.h
libdash/libdash/source/: dllmain.cpp  libdash.cpp  targetver.h
libdash/libdash/source/helpers/: BlockStream.cpp  BlockStream.h  Path.cpp  Path.h  String.cpp  String.h  SyncedBlockStream.h  Time.cpp  Uri.cpp  Uri.h
libdash/libdash/source/manager/: DASHManager.cpp  DASHManager.h
libdash/libdash/source/metrics/: HTTPTransaction.cpp  TCPConnection.cpp
libdash/libdash/source/mpd/: AbstractMPDElement.cpp  AbstractMPDElement.h  AdaptationSet.cpp  BaseUrl.cpp  BaseUrl.h  ContentComponent.cpp  Descriptor.cpp  MPD.cpp  Metrics.cpp  MultipleSegmentBase.cpp  MultipleSegmentBase.h  Period.cpp  ProgramInformation.cpp  Range.cpp  Representation.cpp  RepresentationBase.cpp  RepresentationBase.h  Segment.cpp  Segment.h  SegmentBase.cpp  SegmentBase.h  SegmentList.cpp  SegmentTemplate.cpp  SegmentTemplate.h  SegmentTimeline.cpp  SegmentURL.cpp  SubRepresentation.cpp  Subset.cpp  Timeline.cpp  URLType.cpp
libdash/libdash/source/network/: AbstractChunk.cpp  AbstractChunk.h  DownloadStateManager.cpp
libdash/libdash/source/portable/: MultiThreading.cpp  MultiThreading.h
libdash/libdash/source/xml/: DOMParser.cpp  DOMParser.h  Node.cpp  Node.h
libdash/libdash/xml/: xml.cpp  xml.h
